feat(i18n): add en locale for community translation setting

--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -12,6 +12,10 @@
   "enDisplayDesc": "Display names in English, falling back to Japanese if no translation exists.",
   "jpDisplayLabel": "Japanese",
   "jpDisplayDesc": "Display all names in Japanese (日本語).",
+  "communityTranslationsTitle": "Community Translations",
+  "communityTranslationsDesc": "Display unofficial, community-provided English translations for content not yet available on the Global server.",
+  "communityTranslationsLabel": "Enable Community Translations",
+  "communityTranslationsDisclaimer": "These translations are unofficial and may contain inaccuracies.",
   "uiLangTitle": "UI Language",
   "uiLangDesc": "Choose the language for the application interface.",
   "manageDataTitle": "Manage Data",
