feat(i18n): add jp locale for community translation setting

--- a/src/locales/jp/settings.json
+++ b/src/locales/jp/settings.json
@@ -12,6 +12,10 @@
   "enDisplayDesc": "名前を英語で表示します。翻訳がない場合は日本語が使用されます。",
   "jpDisplayLabel": "日本語",
   "jpDisplayDesc": "全ての名前を日本語で表示します。",
+  "communityTranslationsTitle": "コミュニティ翻訳",
+  "communityTranslationsDesc": "グローバルサーバーでまだ利用できないコンテンツに対して、非公式のコミュニティ提供の英語翻訳を表示します。",
+  "communityTranslationsLabel": "コミュニティ翻訳を有効にする",
+  "communityTranslationsDisclaimer": "これらの翻訳は非公式であり、不正確な場合があります。",
   "uiLangTitle": "UI言語",
   "uiLangDesc": "アプリケーションのインターフェース言語を選択します。",
   "manageDataTitle": "データ管理",
