feat(i18n): update english settings translations for active server

--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -1,11 +1,11 @@
 {
   "title": "Settings & Data Management",
-  "dataSourceTitle": "Data Source",
-  "dataSourceDesc": "Select which server's dataset to use for skills and characters.",
-  "jpDataLabel": "Japanese (All Data)",
-  "jpDataDesc": "Includes all characters and skills, with Japanese names as fallbacks.",
-  "globalDataLabel": "Global (Translated Only)",
-  "globalDataDesc": "Only shows characters and skills that have an official English translation.",
+  "activeServerTitle": "Active Server",
+  "activeServerDesc": "Select which server's inventory and data to use.",
+  "jpServerLabel": "Japanese Server",
+  "jpServerDesc": "Use the JP inventory. Shows all characters and skills.",
+  "globalServerLabel": "Global Server",
+  "globalServerDesc": "Use the Global inventory. Only shows officially translated characters and skills.",
   "dataDisplayLangTitle": "Data Display Language",
   "dataDisplayLangDesc": "Choose the language for displaying names of Umas and skills.",
   "enDisplayLabel": "English",
