--- a/src/locales/jp/settings.json
+++ b/src/locales/jp/settings.json
@@ -1,11 +1,11 @@
 {
   "title": "設定とデータ管理",
-  "dataSourceTitle": "データソース",
-  "dataSourceDesc": "スキルとキャラクターに使用するサーバーのデータセットを選択します。",
-  "jpDataLabel": "日本語（全データ）",
-  "jpDataDesc": "全てのキャラクターとスキルを含みます。翻訳がない場合は日本語名が使用されます。",
-  "globalDataLabel": "グローバル（翻訳済みのみ）",
-  "globalDataDesc": "公式な英語翻訳があるキャラクターとスキルのみ表示します。",
+  "activeServerTitle": "アクティブサーバー",
+  "activeServerDesc": "使用するサーバーの所持ウマ娘とデータを選択します。",
+  "jpServerLabel": "日本サーバー",
+  "jpServerDesc": "日本サーバーの所持ウマ娘を使用します。すべてのキャラクターとスキルが表示されます。",
+  "globalServerLabel": "グローバルサーバー",
+  "globalServerDesc": "グローバルサーバーの所持ウマ娘を使用します。公式に翻訳されたキャラクターとスキルのみ表示されます。",
   "dataDisplayLangTitle": "データ表示言語",
   "dataDisplayLangDesc": "ウマ娘とスキルの名前を表示する言語を選択します。",
   "enDisplayLabel": "英語 (English)",
