feat(i18n): add translation for unassigned state

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -18,7 +18,8 @@
     "title": "Parent Inventory",
     "manageBtn": "Manage Inventory",
     "placeholder": "This server's inventory is empty.",
-    "count": "{{count}} Parents"
+    "count": "{{count}} Parents",
+    "unassigned": "Unassigned"
   },
   "placeholderCard": {
     "title": "This Roster is Empty",
