feat(i18n): add 'move' translation key to common namespace

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -5,6 +5,7 @@
   "confirm": "Confirm",
   "delete": "Delete",
   "edit": "Edit",
+  "move": "Move",
   "ok": "OK",
   "save": "Save",
   "selectPlaceholder": "Select...",
