feat(i18n): add japanese 'move' translation key

--- a/src/locales/jp/common.json
+++ b/src/locales/jp/common.json
@@ -5,6 +5,7 @@
   "confirm": "確認",
   "delete": "削除",
   "edit": "編集",
+  "move": "移動",
   "ok": "OK",
   "save": "保存",
   "selectPlaceholder": "選択...",
