feat(i18n): add japanese translations for transfer error messages

--- a/src/locales/jp/tabs.json
+++ b/src/locales/jp/tabs.json
@@ -55,7 +55,10 @@
       "successCopy": "このプロジェクトとウマ娘一覧は完全に互換性があります。「{{name}} (コピー)」という名前の新しいコピーが{{server}}サーバーに作成されます。",
       "successMove": "このプロジェクトとウマ娘一覧は完全に互換性があり、{{server}}サーバーに移動できます。",
       "errorTitle": "互換性のないプロジェクト",
-      "errorMsg": "このプロジェクトは移動またはコピーできません。以下のアイテムが移動先の{{server}}サーバーに存在しません："
+      "errorMsg": "このプロジェクトは移動またはコピーできません。以下のアイテムが移動先の{{server}}サーバーに存在しません：",
+      "errorParentUma": "親 [{{parentName}}]: キャラクターが移動先のサーバーに存在しません。",
+      "errorParentSkill": "親 [{{parentName}}]: スキル「{{skillName}}」が移動先のサーバーに存在しません。",
+      "errorGoalSkill": "目標: スキル「{{skillName}}」が移動先のサーバーに存在しません。"
     }
   }
 }
