i18n(roster): add translation keys for lineage display

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -12,7 +12,11 @@
     "gen": "Gen",
     "pts": "pts",
     "noWhiteSparks": "No white sparks.",
-    "rank": "Rank"
+    "rank": "Rank",
+    "lineage": "Lineage",
+    "legacyOrigin": "Legacy Origin",
+    "borrowedParent": "Borrowed Parent",
+    "noGpData": "Grandparent data not found."
   },
   "inventory": {
     "title": "Parent Inventory",
