--- a/src/locales/jp/modals.json
+++ b/src/locales/jp/modals.json
@@ -24,7 +24,12 @@
   "legacyOriginSection": "継承元",
   "grandparent1": "親1",
   "grandparent2": "親2",
-  "selectFromInventory": "所持ウマ娘から選択",
-  "enterManually": "手動入力（レンタル）",
-  "selectParentPlaceholder": "親を選択..."
+  "selectFromInventory": "所持ウマ娘",
+  "enterManually": "手動入力",
+  "selectParentPlaceholder": "親を選択...",
+  "selectGrandparentTitle": "継承元の親を選択",
+  "notSelected": "未選択",
+  "selectBtn": "選択",
+  "changeBtn": "変更",
+  "confirmSelectionBtn": "選択を確定"
 }
