feat: add 'select' to common translations

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -8,6 +8,7 @@
   "move": "Move",
   "ok": "OK",
   "save": "Save",
+  "select": "Select",
   "selectPlaceholder": "Select...",
   "searchPlaceholder": "Search...",
   "noResults": "No results found."
