--- a/src/locales/jp/common.json
+++ b/src/locales/jp/common.json
@@ -8,6 +8,7 @@
   "move": "移動",
   "ok": "OK",
   "save": "保存",
+  "select": "選択",
   "selectPlaceholder": "選択...",
   "searchPlaceholder": "検索...",
   "noResults": "結果が見つかりません。"
