refactor(i18n): simplify manual entry text and add duplicate error key

--- a/src/locales/en/modals.json
+++ b/src/locales/en/modals.json
@@ -15,6 +15,7 @@
   "calculateScoreBtn": "Calculate Score & Save",
   "inputRequiredTitle": "Input Required",
   "selectUmaAlert": "Please select an Uma Name.",
+  "duplicateParentError": "A parent with these exact sparks and lineage already exists in the inventory.",
   "deleteConfirmTitle": "Confirm Deletion",
   "deleteConfirmMsg": "Are you sure you want to permanently delete \"{{name}}\" from your inventory?",
   "moveParentConfirmTitle": "Confirm Parent Move",
@@ -25,7 +26,7 @@
   "grandparent1": "Parent 1",
   "grandparent2": "Parent 2",
   "selectFromInventory": "Inventory",
-  "enterManuallyBorrowed": "Manual (Borrowed)",
+  "enterManually": "Manual",
   "selectParentPlaceholder": "Select a parent...",
   "selectGrandparentTitle": "Select Grandparent",
   "notSelected": "Not Selected",
