refactor(i18n): simplify manual entry text and add duplicate error key (jp)

--- a/src/locales/jp/modals.json
+++ b/src/locales/jp/modals.json
@@ -15,6 +15,7 @@
   "calculateScoreBtn": "スコア計算 & 保存",
   "inputRequiredTitle": "入力が必要です",
   "selectUmaAlert": "ウマ娘名を選択してください。",
+  "duplicateParentError": "全く同じ因子と血統を持つ親が既に所持ウマ娘に存在します。",
   "deleteConfirmTitle": "削除の確認",
   "deleteConfirmMsg": "「{{name}}」を所持ウマ娘から完全に削除しますか？",
   "moveParentConfirmTitle": "親の移動の確認",
@@ -25,7 +26,7 @@
   "grandparent1": "親1",
   "grandparent2": "親2",
   "selectFromInventory": "所持ウマ娘",
-  "enterManuallyBorrowed": "手動入力 (レンタル)",
+  "enterManually": "手動入力",
   "selectParentPlaceholder": "親を選択...",
   "selectGrandparentTitle": "継承元の親を選択",
   "notSelected": "未選択",
