--- a/src/locales/jp/info.json
+++ b/src/locales/jp/info.json
@@ -6,8 +6,7 @@
   "licenseText": "このアプリケーションはMITライセンスの下でライセンスされています。",
   "licenseMutedText": "基になるスキル、キャラクター、ゲームデータは「uma-tools」プロジェクトから提供されており、これはGNU General Public License v3.0の下で配布されています。",
   "creditsTitle": "データソースとクレジット",
-  "creditsText": "このツールは、Alpha123氏による素晴らしい成果である",
-  "creditsLink": "uma-tools",
+  "creditsText": "このツールは、いくつかの素晴らしいコミュニティプロジェクトのデータとアセットを利用しています：<ul><li class='mt-2'>ゲームのコアデータは、Alpha123氏による<a href='https://github.com/alpha123/uma-tools' target='_blank' rel='noopener noreferrer'>uma-tools</a>プロジェクトから提供されています。</li><li class='mt-2'>キャラクター画像は<a href='https://gametora.com/' target='_blank' rel='noopener noreferrer'>Gametora</a>様から提供されています。</li><li class='mt-2'>キャラクターの相性データは、Mee1080氏による<a href='https://github.com/mee1080/umaishow/' target='_blank' rel='noopener noreferrer'>UmaiShow</a>プロジェクトから提供されています。</li></ul>これらの皆様の努力なしには、このツールは実現できませんでした。",
   "thanksTitle": "スペシャルサンクス",
   "thanksText": "テストとフィードバックにご協力いただいた<em>Diabellstar</em>様と<em>Sloovy</em>様に感謝いたします。"
 }
