--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -33,5 +33,16 @@
     "title": "このウマ娘一覧は空です",
     "messageInventoryEmpty": "このサーバーの所持ウマ娘がいません。最初の親を追加しましょう！",
     "messageRosterEmpty": "所持ウマ娘の中からこのプロジェクトにウマ娘を割り当ててください。"
+  },
+  "breedingPlanner": {
+    "title": "計画ツール",
+    "manualPair": "手動ペア",
+    "traineeSuggestions": "育成ウマ娘候補",
+    "selectParent1": "親1を選択...",
+    "selectParent2": "親2を選択...",
+    "directAffinity": "直接相性",
+    "selectTrainee": "育成ウマ娘を選択...",
+    "affinity": "相性",
+    "noResults": " rosterに互換性のあるペアが見つかりませんでした。"
   }
 }
