--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -11,5 +11,6 @@
   "select": "Select",
   "selectPlaceholder": "Select...",
   "searchPlaceholder": "Search...",
-  "noResults": "No results found."
+  "noResults": "No results found.",
+  "selectUmaTitle": "Select Trainee"
 }
