--- a/src/locales/jp/common.json
+++ b/src/locales/jp/common.json
@@ -11,5 +11,6 @@
   "select": "選択",
   "selectPlaceholder": "選択...",
   "searchPlaceholder": "検索...",
-  "noResults": "結果が見つかりません。"
+  "noResults": "結果が見つかりません。",
+  "selectUmaTitle": "育成ウマ娘を選択"
 }
