--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -38,10 +38,10 @@
     "title": "計画ツール",
     "manualPair": "手動ペア",
     "traineeSuggestions": "育成ウマ娘候補",
-    "selectParent1": "親1を選択...",
-    "selectParent2": "親2を選択...",
+    "selectParent1": "親1を選択",
+    "selectParent2": "親2を選択",
     "directAffinity": "直接相性",
-    "selectTrainee": "育成ウマ娘を選択...",
+    "selectTrainee": "育成ウマ娘を選択",
     "affinity": "相性",
     "noResults": " rosterに互換性のあるペアが見つかりませんでした。"
   }
