feat(i18n): add japanese keys for enhanced planner

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -40,9 +40,11 @@
     "traineeSuggestions": "育成ウマ娘候補",
     "selectParent1": "親1を選択",
     "selectParent2": "親2を選択",
-    "directAffinity": "直接相性",
+    "directAffinity": "直接相性（親のみ）",
     "selectTrainee": "育成ウマ娘を選択",
     "affinity": "相性",
-    "noResults": " rosterに互換性のあるペアが見つかりませんでした。"
+    "noResults": " rosterに互換性のあるペアが見つかりませんでした。",
+    "bestTrainees": "このペアに最適の育成ウマ娘",
+    "totalAffinity": "合計相性"
   }
 }
