--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -41,10 +41,12 @@
     "selectParent1": "Select Parent 1",
     "selectParent2": "Select Parent 2",
     "directAffinity": "Direct Affinity (Parents Only)",
+    "baseAffinity": "Base Affinity (Parents Only)",
     "selectTrainee": "Select Trainee",
     "affinity": "Affinity",
+    "totalAffinity": "Total Affinity",
     "noResults": "No compatible pairs found in roster.",
     "bestTrainees": "Best Trainees for this Pair",
-    "totalAffinity": "Total Affinity"
+    "excludeInbreeding": "Exclude Inbreeding"
   }
 }
