feat(i18n): add missing translation key for planner placeholder

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -45,6 +45,7 @@
     "affinity": "Total Affinity",
     "totalAffinity": "Total Affinity",
     "noResults": "No compatible pairs found in roster.",
+    "noResultsMessage": "Select a trainee to see the best breeding pairs from your roster.",
     "bestTrainees": "Best Trainees for this Pair",
     "excludeInbreeding": "Exclude Inbreeding",
     "totalSkills": "Total Skills"
