feat(i18n): add missing jp translation for planner placeholder

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -45,6 +45,7 @@
     "affinity": "合計相性",
     "totalAffinity": "合計相性",
     "noResults": "ウマ娘一覧に互換性のあるペアが見つかりませんでした。",
+    "noResultsMessage": "育成ウマ娘を選択して、所持ウマ娘から最適な継承ペアを確認しましょう。",
     "bestTrainees": "このペアに最適の育成ウマ娘",
     "excludeInbreeding": "近親配合を除外",
     "totalSkills": "合計スキル数"
