i18n: add translation for white spark count tooltip

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -13,7 +13,8 @@
         "gen": "Gen",
         "pts": "pts",
         "rank": "Rank",
-        "noWhiteSparks": "No inheritable white sparks."
+        "noWhiteSparks": "No inheritable white sparks.",
+        "whiteSparkCount": "Total Unique White Sparks"
     },
     "inventory": {
         "title": "Parent Inventory",
