i18n: add japanese translation for total spark count

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -17,7 +17,8 @@
     "legacyOrigin": "継承元",
     "borrowedParent": "レンタルウマ娘",
     "noGpData": "継承元のデータが見つかりません。",
-    "whiteSparkCount": "白因子の合計数"
+    "whiteSparkCount": "白因子の合計数",
+    "totalWhiteSparkCount": "血統の白因子合計数（重複を含む）"
   },
   "inventory": {
     "title": "所持ウマ娘一覧",
